--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.social-btn {
+    position: relative;
+    border: solid;
+    margin: 5px;
+    padding: 5px;
+    height: 40px;
+    width: 65px;
+    background: burlywood;
+    border-radius: 10pt;
+    
+}
