--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,7 +18,10 @@
  
  
  .user-info {
-   margin-top: 9px;
+   margin-top: 5px;
+   margin-right: 5px;
+   display: inline-block;
+   font-weight: bold;
  }
  
  .nav {
