--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -12,6 +12,11 @@
        <br />
        <%= @topic.description %>
      </p>
+     <p class="lead">
+       <%= render partial: "comments/list", locals: { comments: @topic.comments } %>
+         <br />
+         <%= @topic.description %>
+     </p>
      <% @topic.posts.each do |post| %>
        <div class="media">
          <div class="media-body">
@@ -22,11 +27,14 @@
            <small>
              submitted <%= time_ago_in_words(post.created_at) %> ago by <%= post.user.name %> <br>
              <%= post.comments.count %> Comments
+             
            </small>
          </div>
        </div>
      <% end %>
+     
    </div>
+   
    <% if current_user %>
     <div class="col-md-4">
      <%= link_to "New Post", new_topic_post_path(@topic), class: 'btn btn-success' %>
@@ -34,3 +42,4 @@
     </div>
    <% end %>
  </div>
+ 
